--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+    <head>
+    <meta charset="UTF-8"/>
     <title>Run Buddy</title>
-  </head>
-  <body>
-    <h1>RUN BUDDY</h1>
-    What We Do
-  </body>
-</html>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+        </head>
+    <body>
+        <!-- navigation -->
+        <header>
+        <h1>RUN BUDDY</h1>
+        <nav>
+            <!-- Unordered list element -->
+            <ul>
+                <!-- List item element-->
+                <li>
+                    <!-- Anchor element-->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
+        </header>
+
+    <!-- hero/jumbotron-->
+    <section> 
+        <div>
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+        <!-- Add form element-->
+        <form>
+            <label for="name">Enter full name:</label>
+            <input type="text" placeholder="Your Name" name="name" id="name"/>
+            <label for="email">Enter email address:</label>
+            <input type="email" placeholder="Email Address" name="email" id="email"/>
+            <label for="telephone number">Enter a telephone number:</label>
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+        <p>
+            Have you ever worked with a trainer before?
+            <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+            <label for="trainer-yes">Yes</label>
+            <input type="radio" name="trainer-confirm" id="trainer-no"/>
+            <label for="trainer-no">No</label>
+        </p>
+        <p>
+            <label for="age-confirm">I acknowledge that I am over the age of 18</label>
+            <input type="checkbox" name="age-confirm" id="age-confirm">
+        </p>
+        <button type="submit">
+            Get running!
+        </button>
+        </form>
+        </div>
+    </section>
+    <!--end hero-->
+      
+
+    <!--"what we do" section-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!-- "what you do" section-->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!-- "meet the trainers" section-->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!--"reach out" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!--footer-->
+    <footer>
