--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     <meta charset="UTF-8"/>
     <title>Run Buddy</title>
-    <link rel="stylesheet" href="./run-buddy/assets/css/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
         </head>
     <body>
         <!-- navigation -->
