--- a/index.html
+++ b/index.html
@@ -76,33 +76,70 @@
         
         <div>
             <!--insert this img element-->
-            <img src="./assets/step-1.svg" alt=""/>
+            <img src="./assets/images/step-1.svg" alt=""/>
             <h3>Step 1: <span>Fill Out The Form Above</span></h3>
             <p>You're already here, so why not?</p>
         </div>
 
         <div>
-            <img src="./assets/step-2.svg" alt=""/>
+            <img src="./assets/images/step-2.svg" alt=""/>
             <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
             <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
 
         <div>
-            <img src="./assets/step-3.svg" alt=""/>
+            <img src="./assets/images/step-3.svg" alt=""/>
             <h3>Step 3: <span>Get Running.</span></h3>
             <p>Hit the ground running (literally) once your trainer lays out your plan</p>
         </div>
 
         <div>
-            <img src="./assets/step-4.svg" alt=""/>
+            <img src="./assets/images/step-4.svg" alt=""/>
             <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-weekly checkins with your trainer will keep you focused</p>
         </div>
     </section>
     <!-- "meet the trainers" section-->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+        <!--first trainer bio-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stehens in his workout clothes, ready to pump iron." />
+                <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed/Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor, non est ducimus quia autem aliquid dignissimos harum modi sit eveniet esse neque, aliquam incidunt, dolorem perspiciatis atque voluptatem et!
+                </p>
+                </div>
+            </article>
+
+        <!--second trainer bio-->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Johanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus qui officia, deleniti quis fugit iusto ad dignissimos, ipsam fuga quaerat excepturi a repudiandae blanditiis illum totam laboriosam deserunt temporibus reprehenderit?
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Johanna Gill cooling off after a workout.">
+        </article>
+
+        <!--third trainer bio-->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights."/>
+            <div class="trainer-bio text-left">
+                <h3> Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea tenetur facilis perspiciatis temporibus architecto in omnis nihil quidem libero. Sit vitae nemo eveniet odit hic? Minima saepe quam iusto veniam.</p>
+            </div>
+        </article>
     </section>
+
+    <!--end meet the trainers-->
 
     <!--"reach out" section-->
     <section>
