--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!--"reach out" section-->
     <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
-        <div class="contact info">
+        <div class="contact-info" id="left-column">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46559.207999283695!2d-89.2469248!3d43.1685632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8806f7ff9d004391%3A0x7633dac3018e524d!2sWalmart%20Supercenter!5e0!3m2!1sen!2sus!4v1599342520933!5m2!1sen!2sus"
              width="400"
               height="400" 
@@ -155,10 +155,11 @@
                tabindex="0"></iframe>
 
         </div>
-        <div>
+
+     <div class="contact-info">
             <h3>Run Buddy</h3>
                 <p>
-                    Amy questions or concerns before signing up>
+                    Any questions or concerns before signing up?
                     <br />
                     Let us know and we'll be happy to talk to you!
                 </p>
@@ -170,7 +171,15 @@
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
         </div>
+
     </section>
+</body> 
 
     <!--footer-->
     <footer>
+        <h2> &#x2764; Made with love by Run Buddy</h2>
+        <div>
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc
+        </div>
+    </footer>
