--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,16 +15,16 @@
                 <!-- List item element-->
                 <li>
                     <!-- Anchor element-->
-                    <a href="./index.html/#what-we-do">What We Do</a>
+                    <a href="./index.html#what-we-do">What We Do</a>
                 </li>
                 <li>
-                    <a href="./index.html/#what-you-do">What You Do</a>
+                    <a href="./index.html#what-you-do">What You Do</a>
                 </li>
                 <li>
-                    <a href="./index.html/#your-trainers">Your Trainers</a>
+                    <a href="./index.html#your-trainers">Your Trainers</a>
                 </li>
                 <li>
-                    <a href="./index.html/#reach-out">Reach Out</a>
+                    <a href="./index.html#reach-out">Reach Out</a>
                 </li>
             </ul>
         </nav>
