--- a/index.html
+++ b/index.html
@@ -165,7 +165,17 @@
         </div>
 
      <div class="contact-info">
-            <h3>Run Buddy</h3>
+            <h3>Contact Us</h3>
+            <form>
+                <label for="contact name">Your Name</label>
+                <input type="text" id="contact name" placeholder="your name"/>
+
+                <label for="contact-message">Message</label>
+                <textarea id="contact-message" placeholder="message"></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
+     </div>
                 <p>
                     Any questions or concerns before signing up?
                     <br />
