--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h3>Step 3.</h3>
             <div class="step-info">
                 <div class="step-img">
-            <img src="./assets/images/step-3.svg" alt=""/></dic>
+            <img src="./assets/images/step-3.svg" alt=""/></div>
             <div class="step-text">
             <h4>Get Running.</h4>
             <p>Hit the ground running (literally) once your trainer lays out your plan</p>
