added flexbox to trainers

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     </section>
     <!-- "meet the trainers" section-->
-    <section id="your trainers" class="trainers">
+    <section id="your trainers">
         <div class="flex-row">
         <h2 class="section-title primary-border">
             Meet The Trainers
@@ -147,11 +147,12 @@
     </div>
 
         <!--first trainer bio-->
+        <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stehens in his workout clothes, ready to pump iron." />
-                <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed/Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephans</h3>
+                <h4 class="trainer-role">Speed/Strength</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor, non est ducimus quia autem aliquid dignissimos harum modi sit eveniet esse neque, aliquam incidunt, dolorem perspiciatis atque voluptatem et!
                 </p>
@@ -160,25 +161,26 @@
 
         <!--second trainer bio-->
         <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Johanna Gill</h3>
-                <h4>Endurance</h4>
+            <img src="./assets/images/trainer-2.jpg" alt="Johanna Gill cooling off after a workout.">
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Johanna Gill</h3>
+                <h4 class="trainer-role">Endurance</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus qui officia, deleniti quis fugit iusto ad dignissimos, ipsam fuga quaerat excepturi a repudiandae blanditiis illum totam laboriosam deserunt temporibus reprehenderit?
                 </p>
             </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Johanna Gill cooling off after a workout.">
         </article>
 
         <!--third trainer bio-->
         <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights."/>
-            <div class="trainer-bio text-left">
-                <h3> Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
+            <div class="trainer-bio">
+                <h3 class="trainer-name"> Harry "the Headband" Smith</h3>
+                <h4 class="trainer-role">Strength</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea tenetur facilis perspiciatis temporibus architecto in omnis nihil quidem libero. Sit vitae nemo eveniet odit hic? Minima saepe quam iusto veniam.</p>
             </div>
         </article>
+        </div>
     </section>
 
     <!--end meet the trainers-->
