added media queries

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
     <head>
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <title>Run Buddy</title>
+    <title>RUN BUDDY</title>
     <link rel="stylesheet" href="./assets/style.css"/>
         </head>
     <body>
