--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,6 +25,9 @@
                     <a href="./index.html#your-trainers">Your Trainers</a>
                 </li>
                 <li>
+                  <a href="/index.html#service-contracts">Service Contracts</a>
+                </li>
+                <li>
                     <a href="./index.html#reach-out">Reach Out</a>
                 </li>
             </ul>
